--- a/qSim/qSim.org
+++ b/qSim/qSim.org
@@ -124,19 +124,68 @@ values are uniformly close to 1.
       plotLine -x "Position (Mb)" -y Mappability -Y "0:1.1"
 #+end_src
 #+begin_export latex
-To actually pick unique regions, we use the program \ty{merwin} from
-the Auger package\footnote{github.com/evolbioinf/auger} to merge
-windows that exceed some threshold. If we arbitrarily set that
-threshold to 0.98, the entire 5 Mb are classified as unique, as they
-should.
+To actually pick regions, we need to classify windows as either unique
+or repeat. We do this using a threshold mappability, $t_{\rm m}$; if
+the mappability of a window is greater or equal to $t_{\rm m}$, it is
+deemed unique. To estimate this threshold, we realize that the values
+from our windows analysis of a random sequence constitute the relevant
+null distribution. So we cut off the lowest 5\% of the windowed
+mappability values. Since the windows advance by $1000/10=100$ steps,
+there are roughly $5\times 10^6/100=5\times 10^4$ windows, of which
+5\% are 2500. So we sort the values and look up the 2500-th entry in
+that distribution, which in our case is 0.992.
 #+end_export
 #+begin_src sh <<qSim.sh>>=
   tail -n +2  q_gm.out.txt |
       tr ' ' '\n' |
       sw -w 1000 |
-      merwin -t 0.98 -w 1000
+      cut -f 3 |
+      sort -n |
+      head -n 2500 |
+      tail -n 1
 #+end_src
 #+begin_export latex
+We pass the mappability threshold to the program \ty{merwin} from the
+Auger package\footnote{github.com/evolbioinf/auger}, which merges
+windows that exceed some threshold into non-overlapping intervals.
+#+end_export
+#+begin_src sh <<qSim.sh>>=
+  tail -n +2  q_gm.out.txt |
+      tr ' ' '\n' |
+      sw -w 1000 |
+      merwin -t 0.992 -w 1000 |
+      head
+#+end_src
+#+begin_export latex
+\begin{verbatim}
+stdin   1       120100  0.9955
+stdin   120201  164500  0.9954
+stdin   164501  179900  0.9958
+stdin   180001  289500  0.9955
+...
+\end{verbatim}
+We might have expected to get a single interval. Instead, we find a
+largish number of them, 56 in our case. However, they sum to 4,990,800
+bp.
+#+end_export
+#+begin_src sh <<qSim.sh>>=
+  tail -n +2  q_gm.out.txt |
+      tr ' ' '\n' |
+      sw -w 1000 |
+      merwin -t 0.992 -w 1000 |
+      awk '{l=$3-$2+1;s+=l}END{print s}'
+#+end_src
+#+begin_export latex
+The 4,990,800 bp we found, are 99.8\% of the 5 Mb we should have
+found---not bad for a classifier.
+#+end_export
+#+begin_src sh <<qSim.sh>>=
+  echo '4990800/5000000*100' | bc -l
+#+end_src
+#+begin_export latex
+\begin{verbatim}
+99.81600000000000000000
+\end{verbatim}
 Instead of the mappability, the program \ty{macle} calculates the
 match complexity, $\cm$, which, like the mappability, has a lower
 bound of 0. However, unlike the mappability, which has an upper bound
@@ -167,9 +216,11 @@ centered on 1, while the mappability is bound by 1.
 #+end_src
 #+begin_export latex
 Since the null distribution of $\cm$ is known~\cite{pir19:hig}, we can
-calculate the threshold for picking unique regions using the program
-\ty{mantile} (Auger). For our example data, this is 0.9852, if we take
-a cut-off probability of 0.05.
+calculate the threshold for picking unique regions rather than look it
+up from a simulated null distribution like we did for the
+mappability. We calculate the $\cm$ threshold with the program
+\ty{mantile} (Auger). For our example data, this is 0.9852, if we
+again take a cut-off probability of 0.05.
 #+end_export
 #+begin_src sh <<qSim.sh>>=
   mantile -l 5000000 -w 1000 -g 0.5 -p 0.05
@@ -209,12 +260,13 @@ this is 99.7\%, very close.
   echo '4987400/5000000 * 100' | bc -l
 #+end_src
 #+begin_export latex
-\subsection{Unique Regions in Non-Unique Background}
-Unique regions are usually picked on a non-unique background. To
-simulate a non-unique, that is homologous, background, we first
-generate a mutated version of our original input sequence using the
-program \ty{mutator} (Biobox). With default settings, \ty{mutator}
-converts the input sequence into its homologue diverged by 1\% mutations per site.
+\subsection{Unique Regions in Homologous Background}
+Unique regions are usually picked on a non-unique, that is homologous,
+background. To simulate a homologous background, we first generate a
+mutated version of our original input sequence using the program
+\ty{mutator} (Biobox). With default settings, \ty{mutator} converts
+the input sequence into its homologue diverged by 1\% mutations per
+site.
 #+end_export
 #+begin_src sh <<qSim.sh>>=
   mutator q.fasta > q2.fasta
@@ -227,6 +279,89 @@ query, where nothing should be unique.
   echo ">q3" > q3.fasta
   cat q.fasta q2.fasta |
       grep -v '^>' >> q3.fasta
+#+end_src
+#+begin_export latex
+We calculate the \ty{genmap} index and the mappability values.
+#+end_export
+#+begin_src sh <<qSim.sh>>=
+  genmap index -F q3.fasta -I q3_gm.idx
+  genmap map -I q3_gm.idx -K 15 -E 0 -O q3_gm.out -t
+#+end_src
+#+begin_export latex
+We carry out the sliding window analysis of the mappability and plot
+it along the first 5 Mb, our original sequence. We save the results in
+\ty{q3.map}.
+#+end_export
+#+begin_src sh <<qSim.sh>>=
+  tail -n +2 q3_gm.out.txt |
+      tr ' ' '\n' |
+      head -n 5000000 |
+      sw -w 1000 > q3.map
+#+end_src  
+#+begin_export latex
+On the background of the homologous sequence, most k-mers are found
+twice, once in the original and once in the homolog. However, a
+substantial number of k-mers will be mutated and thus become
+unique. The probability of a 15-mer mutating at a mutation rate of
+1\%, is the complement of it not mutating,
+\[
+1-\left(1-\frac{1}{100}\right)^{15}\approx 0.14
+\]
+If we ignore all k-mers apart from singletons and doubletons, we
+expect an average mappability of
+\[
+0.5(1-0.14) + 0.14 = 0.57.
+\]
+The plot of the mappabilities in Figure~\ref{fig:qgm3} shows that this
+is indeed the case, with no mappability values close to 1.
+\begin{figure}
+  \begin{center}
+    \includegraphics{../qSim/q_gm3}
+  \end{center}
+  \caption{}\label{fig:qgm3}
+\end{figure}
+#+end_export
+#+begin_src sh <<qSim.sh>>=
+  awk '{print $2/1000000, $3}' q3.map |
+      plotLine -x "Position (Mb)" -y Mappability -Y "0:1.1"
+#+end_src    
+#+begin_export latex
+We shouldn't pick any unique regions from \ty{q3.fasta}, but let's
+check this ``negative control'' works. Since the sequence we analyze
+has doubled in length, we need a new mappability threshold. We
+calculate this from a shuffled, or randomized, version of
+\ty{q3.fasta}. This is generated with the program \ty{randomizeSeq}
+(Biobox). We save the randomized sequence in \ty{q3r.fasta}.
+#+end_export
+#+begin_src sh <<qSim.sh>>=
+  randomizeSeq q3.fasta > q3r.fasta
+#+end_src
+#+begin_export latex
+We index the randomized sequence and calculate its mappability.
+#+end_export
+#+begin_src sh <<qSim.sh>>=
+  genmap index -F q3r.fasta -I q3r_gm.idx
+  genmap map -I q3r_gm.idx -K 15 -E 0 -O q3r_gm.out -t
+#+end_src
+#+begin_export latex
+Now we carry out the sliding window analysis and pick the 5000-th
+entry in the null distribution of mappability values, 0.986.
+#+end_export
+#+begin_src sh <<qSim.sh>>=
+  grep -v '^>' q3r_gm.out.txt |
+      tr ' ' '\n' |
+      sw -w 1000 |
+      cut -f 3 q3r.map |
+      sort -n |
+      head -n 5000 |
+      tail -n 1
+#+end_src
+#+begin_export latex
+The search for unique regions with this threshold finds nothing, as
+expected.
+#+end_export
+#+begin_src sh <<qSim.sh>>=
+  merwin -t 0.986 q3.map
 #+end_src
 #+begin_export latex
 We calculate the \ty{macle} index of our new query.
@@ -268,7 +403,7 @@ Then we search for unique regions and find none, as expected.
       merwin -t 0.9855 -w 1000
 #+end_src
 #+begin_export latex
-In order to generate a discrete non-unique region on a non-unique
+In order to generate a discrete unique region on a homologous
 background, we produce a fourth query using the original sequence and
 its homolog, from which we excise 2 kb right in the middle using the
 program \ty{cutSeq} (Biobox).
@@ -279,7 +414,53 @@ program \ty{cutSeq} (Biobox).
   cutSeq -r 1-2499000,2501001-5000000 -j q2.fasta >> q4.fasta
 #+end_src
 #+begin_export latex
-We calculate the index.
+We calculate the \ty{genmap} index and the mappability values.
+#+end_export
+#+begin_src sh <<qSim.sh>>=
+  genmap index -F q4.fasta -I q4_gm.idx
+  genmap map -I q4_gm.idx -K 15 -E 0 -O q4_gm.out -t
+#+end_src
+#+begin_export latex
+We carry out the sliding window analysis and save the mappability
+windows of the original sequence in \ty{g4.map}.
+#+end_export
+#+begin_src sh <<qSim.sh>>=
+  grep -v '^>' q4_gm.out.txt |
+      tr ' ' '\n' |
+      head -n 5000000 |
+      sw -w 1000 > q4.map
+#+end_src
+#+begin_export latex
+Figure~\ref{fig:qgm4} shows a plot of the mappability along the
+original sequence with the central unique region clearly indicated by
+the spike to approximately 1.
+\begin{figure}
+  \begin{center}
+    \includegraphics{../qSim/q_gm4}
+  \end{center}
+  \caption{Sliding window analysis of mappability along a random 5 Mb
+    sequence on the background of a sequence diverged by 1\%; the
+    background sequence also has a 2 kb deletion at its center which
+    shows up as the peak in the middle. }\label{fig:qgm4}
+\end{figure}
+#+end_export
+#+begin_src sh <<qSim.sh>>=
+      awk '{print $2/1000000, $3}' q4.map |
+      plotLine -x "Position (Mb)" -y Mappability -Y "0:1.1"
+#+end_src
+#+begin_export latex
+It is easy to see the peak in Figure~\ref{fig:qgm4}. With the same
+ease we can use \ty{merwin} and our mappability threshold of 0.986 to
+pick precisely the 2 kb we should be picking.
+#+end_export
+#+begin_src sh <<qSim.sh>>=
+  merwin -w 1000 -t 0.986 q4.map
+#+end_src
+#+begin_export latex
+\begin{verbatim}
+stdin   2499001 2501000 0.995
+\end{verbatim}
+We now turn from \ty{genmap} to \ty{macle} and calculate its index.
 #+end_export
 #+begin_src sh <<qSim.sh>>=
   macle -s q4.fasta > q4_ma.idx
@@ -293,10 +474,10 @@ central peak of $\cm=1$, indicating the unique region we just created.
   \begin{center}
     \includegraphics{../qSim/q4_ma}
   \end{center}
-  \caption{Sliding window analysis of a random 5 Mb sequence on the
-    background of a sequence diverged by 1\%; the background sequence
-    also has a 2 kb deletion at its center which shows up as the peak
-    in the middle.}\label{fig:qma3}
+  \caption{Sliding window analysis of $\cm$ along a random 5 Mb
+    sequence on the background of a sequence diverged by 1\%; the
+    background sequence also has a 2 kb deletion at its center which
+    shows up as the peak in the middle.}\label{fig:qma3}
 \end{figure}
 #+end_export
 #+begin_src sh <<qSim.sh>>=
