Edited description of SIM2

--- a/doc/ref.bib
+++ b/doc/ref.bib
@@ -15,4 +15,66 @@
   year = 2019,
   pages = {1813--1819}
 }
- 
+
+@Article{ber21:kec,
+  author = 	 {Beran, P. and Stehlikov\'{a}, D. and Cohen, S. P. and \v{C}urn, V.},
+  title = 	 {{KEC}: unique sequence search by k-mer exclusion},
+  journal = 	 {Bioinformatics},
+  year = 	 2021,
+  key = 	 1609,
+  volume = 	 37,
+  pages = 	 {3349--3350}}
+
+@Article{hau21:fur,
+  author = 	 {Haubold, B. and Kl\"otzl, F. and Hellberg, L. and Thompson, D. and Cavalar, M.},
+  title = 	 {\texttt{Fur}: {Find} {Unique} genomic {Regions} for diagnostic {PCR}},
+  journal = 	 {Bioinformatics},
+  volume =       37,
+  pages =        {2081--2087},
+  year = 	 2021}
+
+@Article{vie24:mar,
+  author = 	 {Vieira Mourato, B. and Tsers, I. and Denker, S. and Kl\"otzl, F. and Haubold, B.},
+  title = 	 {Marker discovery in the large},
+  journal = 	 {Bioinformatics Advances},
+  year = 	 2024,
+  volume = 	 4,
+  pages =        {vbae113},
+  }
+
+@Article{san20:rec,
+  author = 	 {{SantaLucia}, J. and Sozhamannan, S. and Gans, J. D. and Koehler, J. W. and Soong, R. and Lin, N. J. and Xie, G. and Olson, V. and Roth, K. and Beck, L.},
+  title = 	 {{Appendix Q}: {Recommendations} for developing molecular assays for micorobial pathogen detection using modern \emph{in silico} approaches},
+  journal = 	 {Journal of AOAC International},
+  year = 	 2020,
+  key = 	 1607,
+  volume = 	 103,
+  pages = 	 {882--899}}
+
+@Article{tho88:mol,
+  author = 	 {Thomas, J. B. and Crews, S. T. and Goodman, C. S.},
+  title = 	 {Molecular genetics of the \emph{single-minded} locus: {A} gene involved in the development of the {Drosophila} nervous system},
+  journal = 	 {Cell},
+  year = 	 1988,
+  key = 	 1636,
+  volume = 	 52,
+  pages = 	 {133--141}}
+                  
+@Article{dah95:dow,
+  author = 	 {Dahmane, N. and Charron, G. and Lopes, C. and Yaspo, M.-L. and Maunoury, C. and Decorte, L. and Sinet, P.-M. and Bloch, B. and Delabar, J.-M.},
+  title = 	 {Down syndrome-critical region contains a gene homologous to \emph{Drosophila} \emph{sim} expression during rat and human central nervous system development},
+  journal = 	 {Proceedings of the National Academy of Sciences, USA},
+  year = 	 1995,
+  key = 	 1637,
+  volume = 	 92,
+  pages = 	 {9191--9195}}
+
+@Article{but22:cha,
+  author = 	 {Button, E. L. and Rossi, J. J. and {McDougal}, D. P. and Bruning, J. B. and Peet, D. J. and Bersten, D. C. and Rosenfeld, J. A. and Whitelaw, M. L.},
+  title = 	 {Characterization of functionally deficient {SIM2} variants found in patients with neurological phenotypes},
+  journal = 	 {Biochemical Journal},
+  year = 	 2022,
+  key = 	 1638,
+  volume = 	 479,
+  pages = 	 {1441--1454}}
+
